--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -1,12 +1,11 @@
-/* The styles for the elements */
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 85%;
+    font-size: 90%;
     margin-left: 2em;
     margin-right: 2em;
 }
 h1 {
-    font-size: 140%;
+    font-size: 160%;
     color: teal;
     margin-bottom: .5em;
 }
@@ -18,7 +17,7 @@ br {
     width: 2em;
 }
 
-/* The styles for the tables */
+
 table {
     border: 1px solid black;
     border-collapse: collapse;
@@ -31,4 +30,7 @@ th, td {
 }
 .right {
     text-align: right;
+}
+.checkout{
+    margin-top: 10px;
 }
